# Hex-AI-Agent

./: HexAgent.py  README.md  board_state.py  cpp_weights.pt  mcts.py  model.py  overnight.py  preprocess.py  self_play.py  train.py  weights.pt
cpp/: BoardState.cpp  BoardState.h  CMakeLists.txt  MCTS.cpp  mcts_binding.cpp
experiments/: transposition_profiling.py
scripts/: overnight.py  preprocess.py  self_play.py  setup_cpp.py  train.py
src/cpp/: MCTS.h  mcts_binding.cpp
src/neural-network/: weights.pt
